# spicy

./: .pre-commit-config.yaml  CMakeLists.txt
cmake/: ASTOperators.cmake  Util.cmake
hilti/runtime/include/: util.h
hilti/runtime/include/types/: union.h
hilti/toolchain/: CMakeLists.txt
hilti/toolchain/include/: global.h
hilti/toolchain/include/ast/: all.h  ast-context.h  attribute.h  ctor.h  declaration.h  doc-string.h  expression.api  expression.h  forward.h  function.h  id.h  module.h  node-range.h  node-ref.h  node.h  nodes.decl  notes.txt  operator.api  operator.h  scope-lookup.h  scope.h  statement.api  statement.h  type.api  type.h  visitor-dispatcher.h  visitor.h
hilti/toolchain/include/base/: id-base.h  logger.h  type_erase.h  util.h  visitor.h
hilti/toolchain/include/compiler/: coercion.h  context.h  (+4 more)
hilti/toolchain/src/: global.cc
hilti/toolchain/tests/: visitor.cc
scripts/: CMakeLists.txt  autogen-builder-api  autogen-builder-api.cc  autogen-dispatchers  autogen-operators-implementations
spicy/lib/: spicy_rt.hlt
tests/Baseline/hilti.optimization.dead_code/: opt.hlt
tests/Baseline/spicy.optimization.default-parser-functions/: log  opt.hlt
tests/Baseline/spicy.optimization.feature_requirements/: log  opt.hlt
tests/Baseline/spicy.optimization.unused-functions/: log  opt.hlt
tests/Baseline/spicy.optimization.unused-types/: log  opt.hlt
tests/Baseline/spicy.rt.debug-trace/: .stderr
tests/hilti/optimization/: dead_code.hlt
tests/hilti/rt/: profiler.hlt
transform/: CMakeLists.txt  change-all  change-type.cc  test.cc  test2.cc
(+254 files in other folders)
